<resources>
    <string name="app_name">GarbageBin</string>
    <string name="base_url">http://dev614.trigma.us/garbagebin/index.php?route=webservices/</string>

    <string name="prefs_name">Prefs_Name</string>
    <string name="gcm_id">Device Token</string>
    <string name="device_type">android</string>
    <string name="deviceprefs_name">DevicePrefs_Name</string>
    <!--<string name="app_id">364110757118850</string>-->

    <string name="app_id">903109523106453</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="dntworry_textview">Don\'t worry, we won\'t post on your behalf</string>
    <string name="fb_btn">Login with Facebook</string>
    <string name="google_btn">Login with Google</string>
    <string name="signup_textview">SIGN UP</string>
    <string name="login_textview">LOGIN</string>
    <string name="login_header_textview">Login</string>
    <string name="termsOfService_textview">Terms of Service</string>
    <string name="and_textview">&amp;</string>
    <string name="privacy_textview">Privacy Policy</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="username_orEmail_et">Username or Email</string>
    <string name="pwd_et">Password</string>
    <string name="forgot_pwd_textView">Forgot password?</string>
    <string name="byLogin_textView">By logging in, you agree to Garbage Bin\'s</string>
    <string name="err_msg_password">Please enter password.</string>
    <string name="err_msg_email">Please enter valid email.</string>
    <string name="err_msg_name">Please enter valid name.</string>
    <string name="internet_problem">No Internet Connection Available.</string>
    <string name="title_activity_sign_up">SignUp</string>

    <string name="signup_button">SIGN UP</string>
    <string name="signup_header_textview">Sign up</string>
    <string name="promocode_et">Enter Promo Code</string>
    <string name="sendOccasional_textView">Send me Occasional email updates</string>
    <string name="alreadymember_textView">Already a member? Login</string>
    <string name="promocode_textView"><![CDATA[<b>Promo Code: </b><font color="#848484">In case you have a</font><font color="#F16716"> Promo Code</font>,\n<font color="#848484">Enter it below and click Apply</font>]]></string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="timeline_header_textview">Garbage Bin</string>
    <string name="user_name_tv">Hi jackson Smith</string>
    <string name="username_et">Username</string>
    <string name="emailAddress_et">Email</string>
    <string name="views_tv">19001</string>
    <string name="tym_tv">1 day ago</string>
    <string name="comments_count_textView">74 Comments</string>
    <string name="likes_count_textView">1934 Likes</string>
    <string name="title_activity_main_fragment">MainFragment</string>
    <string name="title_activity_badge">BadgeActivity</string>
    <string name="add_address_textview">Add a Address</string>
    <string name="fullName_edittext">Full Name</string>
    <string name="orderPlace_tv">Order Place</string>
    <string name="city_edittext">City</string>
    <string name="state_edittext">State</string>
    <string name="zipcode_edittext">Zip Code</string>
    <string name="save_button">SAVE</string>
    <string name="cancel_button">CANCEL</string>
    <string name="qty_textView">Qty</string>
    <string name="option_textView">Option</string>
    <string name="bad_connection">No internet connection available.</string>
    <string name="bad_response">Bad server response.</string>
    <string name="progress_loading">Loading...</string>
    <string name="name_et">Name</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>

    <string name="profile_pic_tv">Profile Picture</string>
    <string name="name_edittext">Name</string>
    <string name="dob_edittext">Date of Birth</string>
    <string name="email_edittext">Email</string>
    <string name="cntactNo_edittext">Contact Number</string>
    <string name="location_edittext">Location</string>
    <string name="address_edittext">Address</string>
    <string name="done_button">DONE</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_header_textview">Profile</string>
    <string name="title_activity_test">Test</string>

    <string name="coutry_tv">Country</string>
    <string name="state_tv">State</string>
    <string name="city_tv">City</string>
    <string name="title_activity_time_line_detail">TimeLineDetailActivity</string>
    <string name="title_activity_character_detail">CharacterDetailActivity</string>
    <string name="send_comment_et">Write a comment</string>
    <string name="timeline_related_tv">Related Products :</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="be_first_tv">Be first to comment</string>
    <string name="add_comment_tv">Add more comments</string>
    <string name="title_activity_post__comment_activity">Post_Comment_activity</string>
    <string name="hotgags_title">Hot Gags</string>
    <string name="feature_title">Feature Posts</string>
    <string name="timeline_title">Timeline</string>
    <string name="help_tutorial_tv">Help Tutorial</string>
    <string name="change_pwd_tv">Change Password</string>
    <string name="notify_preview_tv">Notification Preview</string>
    <string name="pt_tv">Privacy &amp; Terms</string>
    <string name="inapp_tv">In-App Sound</string>
    <string name="settings_tv">Settings</string>
    <string name="point_badges_tv">Points/Badges</string>
    <string name="bronze_tv">Achieved</string>
    <string name="silver_tv">1000\nPoints remaining</string>
    <string name="gold_tv">2000\nPoints remaining</string>
    <string name="badges">Badges</string>
    <string name="send_points">Send Points</string>
    <string name="pointsTransfer">Points Transfer</string>
    <string name="select_cntact_et">Select Contact</string>
    <string name="points_et">Points</string>
    <string name="send_button">SEND</string>
    <string name="point_transfer_tv">Points Transfer</string>
    <string name="old_pwd_et">Old Password</string>
    <string name="new_pwd_et">New Password</string>
    <string name="cnfrm_pwd_et">Confirm Password</string>
    <string name="feedback_tv">Feedback</string>
    <string name="terms_cnditions_tv">Terms &amp; Conditions</string>
    <string name="latest_transactions">Latest Transactions</string>
    <string name="wallet_tv">Wallet</string>
    <string name="invite_referral_tv">Invite/Referrals</string>
    <string name="invirtefriend_tv">Invite Friends</string>
    <string name="google_tv">Google</string>
    <string name="facebook_tv">Facebook</string>
    <string name="email_tv">Email</string>
    <string name="invite_link_tv">Invite Link</string>
    <string name="referral_link_tv">http://www.referrallink.com</string>
    <string name="copy_link_tv">Copy Invite Link</string>
    <string name="sms_tv">Sms</string>
    <string name="wallet_balance_tv">\u20B9 2000.00</string>
    <string name="refer_tv"><![CDATA[<font color="#919191">Refer a Friend to </font><font color="#F16716"><b>Get Points</b></font>]]></string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_reply__comments_">Reply_Comments_Activity</string>
    <string name="title_activity_zoom_example">ZoomExample</string>
    <string name="help_tv">Help</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.</string>
    <string name="title_activity_comic_strip">ComicStrip</string>

    <string name="basicinfo_et">BASIC INFORMATION</string>
    <string name="selectcity_et">Select city</string>
    <string name="nav_et"></string>

    <string name="phone_et">Phone</string>

    <string name="profilepicture_et">PROFILE PICTURE</string>
    <string name="changepicture_et">Change Picture</string>
    <string name="removepicture_et">Remove Picture</string>
    <string name="edt_search">Search</string>
    <string name="et_leavecommenthere">Leave a comment here...</string>
    <string name="btn_send">Send</string>
</resources>
