<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream_color"

    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_sub_background"
                android:padding="5dp"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:background="@color/orange"
                    android:layout_marginBottom="15dp"
                    android:padding="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/referral_balance_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:text="@string/wallet_balance_tv"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="Available Credits"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/invite_tv_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refer_tv"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/light_black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="@color/light_grey"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/invirtefriend_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invirtefriend_tv"
                    android:textSize="14sp"
                    android:textColor="@color/light_black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    />



                <TextView
                    android:id="@+id/facebook_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/facebook_invite"
                    android:text="@string/facebook_tv"
                    android:drawablePadding="15dp"
                    android:textColor="@color/light_black"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:padding="10dp"
                    />

                <TextView
                    android:id="@+id/google_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/google_"
                    android:text="@string/google_tv"
                    android:drawablePadding="15dp"
                    android:textColor="@color/light_black"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:padding="10dp"
                    />
                <TextView
                    android:id="@+id/email_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/email_invite"
                    android:text="@string/email_tv"
                    android:drawablePadding="15dp"
                    android:textColor="@color/light_black"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:padding="10dp"
                    />

                <TextView
                    android:id="@+id/sms_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/message"
                    android:text="@string/sms_tv"
                    android:drawablePadding="15dp"
                    android:textColor="@color/light_black"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:padding="10dp"
                    />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_sub_background"
            android:padding="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/invite_link_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_link_tv"
                android:textSize="14sp"
                android:textColor="@color/light_black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/light_grey"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/referral_link_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="14sp"
                android:textColor="@color/light_black"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/other_et_bg"
                />

            <TextView
                android:id="@+id/copy_link_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy_link_tv"
                android:textSize="14sp"
                android:textColor="@color/light_black"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:background="@drawable/copy_link_bg"
                />


        </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
